# py2exe

./: .env.example  .gitignore  README.md  cloudflare.py  config.example.json  config.py  main.py  pyproject.toml  version_server.py
form/: build.spec  setup.iss
version/: run.py
version/templates/: dashboard.html
